# deep-research-engine

./: .env.example  .gitignore  ARCHITECTURE_AND_HOW_IT_WORKS.md  DEPLOYMENT_GUIDE.md  PROJECT_DEEP_DIVE_GUIDE.md  README.md  architecture.md  docker-compose.yml  future.md  instructions.md  next.md  package-lock.json  package.json  render.yaml  verify_deployment.py
backend/: Dockerfile  inspect_db.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_app.py  test_conversation_flow.py  test_e2e_backend.py
backend/app/: config.py  dal.py  database.py  error_handling.py  flashcards.py  formatting.py  llm_gateway.py  main.py  middleware.py  model_routing.py  pipeline.py
backend/app/agents/: router.py
backend/app/graph/: builder.py  models.py  state.py  supervisor.py
backend/app/graph/nodes/: clean.py  discovery.py  evaluation.py  harvest.py  reasoning.py  synthesis.py
backend/app/routes/: chat.py  ingest.py  reports.py  settings.py  users.py
backend/app/tools/: embedder.py  evaluator.py  git_tool.py  indexer.py  pdf_tool.py  pinecone_client.py  scraper.py  search.py
backend/tests/: test_graph.py  test_scraper.py  test_search.py  test_supervisor.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/api/answer/: route.ts
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/flashcards/: route.ts
frontend/src/app/api/ingest/: route.ts
frontend/src/app/api/report/: route.ts
frontend/src/components/: action-bar.tsx  canvas-editor.tsx  chat-messages.tsx  chat.tsx  conversation-sidebar.tsx  flashcard-generator-button.tsx  flashcards-panel.tsx  ingested-sources-list.tsx  message-history.tsx  modern-header.tsx  modern-input.tsx  modern-sidebar.tsx  onboarding-tour.tsx  pdf-upload-dialog.tsx  report-card.tsx  report-preview.tsx  rounded-chat-input.tsx  settings-dialog.tsx  sources-panel.tsx  thought-trace.tsx  url-ingest-dialog.tsx
frontend/src/lib/: llm.ts  source-store.ts  sse-client.ts  sse.ts  use-api-error.ts  use-session-storage.ts  use-session.ts
